Corrected Chat GM, Team display, Gold input and window overflow

--- a/src/App.css
+++ b/src/App.css
@@ -5,4 +5,5 @@
   text-align: center;
   top: 0px;
   left: 0px;
+  overflow: hidden;
 }
